ammend-hiding-ignore-file -b

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ map-output.csv
 # text-notebooks
 
 # ignore tableau file
-tableau-waweru-dsc-phase-1-project-viz-v3.twbx
+## tableau-waweru-dsc-phase-1-project-viz-v3.twbx
